--- a/inventory.ui
+++ b/inventory.ui
@@ -53,14 +53,14 @@ QWidget {background-color: white}
       <item row="4" column="2">
        <layout class="QGridLayout" name="gridLayout">
         <item row="8" column="0">
-         <widget class="QPushButton" name="pushButton">
+         <widget class="QPushButton" name="addToCartButton">
           <property name="text">
            <string>Add to Cart</string>
           </property>
          </widget>
         </item>
         <item row="1" column="0" colspan="2">
-         <widget class="QLabel" name="label_15">
+         <widget class="QLabel" name="partCategory">
           <property name="font">
            <font>
             <pointsize>14</pointsize>
@@ -74,7 +74,7 @@ QWidget {background-color: white}
          </widget>
         </item>
         <item row="3" column="1">
-         <widget class="QLabel" name="label_8">
+         <widget class="QLabel" name="partRFID">
           <property name="font">
            <font>
             <pointsize>14</pointsize>
@@ -86,7 +86,7 @@ QWidget {background-color: white}
          </widget>
         </item>
         <item row="5" column="1">
-         <widget class="QLabel" name="label_9">
+         <widget class="QLabel" name="partBox">
           <property name="font">
            <font>
             <pointsize>14</pointsize>
@@ -112,11 +112,11 @@ QWidget {background-color: white}
          </widget>
         </item>
         <item row="8" column="1">
-         <widget class="QSpinBox" name="spinBox">
+         <widget class="QSpinBox" name="qtySpinBox">
           <property name="minimumSize">
            <size>
             <width>0</width>
-            <height>0</height>
+            <height>45</height>
            </size>
           </property>
          </widget>
@@ -164,7 +164,7 @@ QWidget {background-color: white}
          </widget>
         </item>
         <item row="2" column="1">
-         <widget class="QLabel" name="label_7">
+         <widget class="QLabel" name="partID">
           <property name="font">
            <font>
             <pointsize>14</pointsize>
@@ -176,7 +176,7 @@ QWidget {background-color: white}
          </widget>
         </item>
         <item row="6" column="1">
-         <widget class="QLabel" name="label_10">
+         <widget class="QLabel" name="partQty">
           <property name="font">
            <font>
             <pointsize>14</pointsize>
@@ -202,7 +202,7 @@ QWidget {background-color: white}
          </widget>
         </item>
         <item row="4" column="1">
-         <widget class="QLabel" name="label_6">
+         <widget class="QLabel" name="partShelf">
           <property name="font">
            <font>
             <pointsize>14</pointsize>
@@ -214,7 +214,7 @@ QWidget {background-color: white}
          </widget>
         </item>
         <item row="0" column="0" colspan="2">
-         <widget class="QLabel" name="label_13">
+         <widget class="QLabel" name="partName">
           <property name="minimumSize">
            <size>
             <width>400</width>
@@ -233,7 +233,7 @@ QWidget {background-color: white}
           </property>
          </widget>
         </item>
-        <item row="7" column="0">
+        <item row="7" column="0" colspan="2">
          <spacer name="verticalSpacer_5">
           <property name="orientation">
            <enum>Qt::Vertical</enum>
