--- a/resetpin.ui
+++ b/resetpin.ui
@@ -109,7 +109,7 @@ QWidget {background-color: rgb(255, 255, 255)}
          </property>
         </widget>
        </item>
-       <item row="1" column="1">
+       <item row="0" column="1" rowspan="2">
         <spacer name="horizontalSpacer_3">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
