--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -34,6 +34,19 @@
     <item row="0" column="0">
      <layout class="QGridLayout" name="gridLayout">
       <item row="4" column="0">
+       <spacer name="verticalSpacer_2">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="6" column="0">
        <spacer name="verticalSpacer">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
@@ -48,8 +61,11 @@
       </item>
       <item row="2" column="0" alignment="Qt::AlignHCenter">
        <widget class="QLabel" name="label_2">
+        <property name="styleSheet">
+         <string notr="true">font: 75 100pt &quot;Noto Sans&quot;;</string>
+        </property>
         <property name="text">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:90pt; font-weight:600;&quot;&gt;S I M S&lt;/span&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:14pt; font-weight:600; font-style:italic;&quot;&gt;Smart Inventory Management System&lt;/span&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;br/&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;br/&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         <string>S I M S</string>
         </property>
        </widget>
       </item>
@@ -85,7 +101,7 @@
         </property>
        </widget>
       </item>
-      <item row="3" column="0" alignment="Qt::AlignHCenter">
+      <item row="5" column="0" alignment="Qt::AlignHCenter">
        <widget class="QPushButton" name="pushButton">
         <property name="maximumSize">
          <size>
@@ -99,6 +115,16 @@
         </property>
         <property name="text">
          <string>Continue</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0" alignment="Qt::AlignHCenter">
+       <widget class="QLabel" name="label_3">
+        <property name="styleSheet">
+         <string notr="true">font: 75 italic 24pt &quot;Noto Sans&quot;;</string>
+        </property>
+        <property name="text">
+         <string>Smart Inventory Management System</string>
         </property>
        </widget>
       </item>
