--- a/scratchpad.ui
+++ b/scratchpad.ui
@@ -360,6 +360,28 @@
     </item>
    </layout>
   </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>100</x>
+     <y>340</y>
+     <width>146</width>
+     <height>43</height>
+    </rect>
+   </property>
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+     <horstretch>0</horstretch>
+     <verstretch>0</verstretch>
+    </sizepolicy>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 24pt &quot;Noto Sans&quot;;</string>
+   </property>
+   <property name="text">
+    <string>Reset PIN</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
