--- a/userprofile.ui
+++ b/userprofile.ui
@@ -242,6 +242,26 @@ QWidget {background-color: rgb(255, 255, 255)}
        </property>
       </widget>
      </item>
+     <item row="11" column="0" alignment="Qt::AlignLeft">
+      <widget class="QPushButton" name="lockButton">
+       <property name="text">
+        <string>Lock</string>
+       </property>
+       <property name="icon">
+        <iconset theme="system-lock-screen"/>
+       </property>
+      </widget>
+     </item>
+     <item row="11" column="2" alignment="Qt::AlignRight">
+      <widget class="QPushButton" name="logoutButton">
+       <property name="text">
+        <string>Logout</string>
+       </property>
+       <property name="icon">
+        <iconset theme="system-log-out"/>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
   </layout>
